# clinical-health-platform

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  clinical_health.db  pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: __init__.py  assessment.py  base.py  patient.py  treatment.py
backend/app/routers/: assessments.py  patients.py  treatments.py
backend/app/schemas/: assessment.py  patient.py  treatment.py
backend/migrations/: env.py
backend/migrations/versions/: 6518274cc107_create_initial_tables.py
backend/tests/: test_main.py  test_patients.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/assessments/: AssessmentForm.js  AssessmentList.js
frontend/src/components/dashboard/: Dashboard.js  PatientChart.js  ProjectPhases.js  StatCard.js
frontend/src/components/layout/: Footer.js  Navbar.js
frontend/src/components/patients/: PatientDetail.js  PatientForm.js  PatientList.js
frontend/src/components/project/: ProjectFlowchart.js  ProjectVision.js
frontend/src/components/treatments/: TreatmentForm.js  TreatmentList.js
frontend/src/services/: api.js
frontend/tests/: dashboard.spec.js  patient-flow.spec.js
